--- a/pastelka/scss/main.scss
+++ b/pastelka/scss/main.scss
@@ -22,6 +22,7 @@
 @import "delivery";
 @import "discount";
 @import "about";
-@import "register";
+@import "registration";
+@import "registrationSuccessful";
 
 @import "footer";
