--- a/pastelka/css/main.css
+++ b/pastelka/css/main.css
@@ -5229,7 +5229,8 @@ All this is done for any sub-level being entered.
 .checkoutFormAddress,
 .registerFormBlock1,
 .registerFormBlock2,
-.registerFormBlock3 {
+.registerFormBlock3,
+.partnershipForm {
   display: table;
   border-spacing: 0 0.83333em;
   font-size: 1.125em;
@@ -5251,7 +5252,7 @@ All this is done for any sub-level being entered.
 .checkoutFormContactCell:first-child,
 .checkoutFormAddressCell:first-child,
 .registerFormCell:first-child {
-  width: 100px;
+  width: 110px;
   color: #757575;
 }
 
@@ -5790,7 +5791,12 @@ All this is done for any sub-level being entered.
   margin-bottom: 3.75em;
 }
 
-.registerFormBlock2 {
+.registerFormBlock2 .registerFormRow:last-child .registerFormCell:first-child {
+  vertical-align: top;
+  line-height: 2em;
+}
+
+.registerFormBlock3 {
   margin-bottom: 2.5em;
 }
 
@@ -5932,6 +5938,56 @@ All this is done for any sub-level being entered.
   text-align: center;
   font-size: 1.125em;
   padding: 0.55556em 0;
+}
+
+/*------------------ Partnership ------------------*/
+.wrapPartnership {
+  margin-bottom: 1.875em;
+}
+.wrapPartnership .wrapTitleDecor {
+  text-align: left;
+}
+.wrapPartnership .partnershipTitle {
+  padding-left: 0;
+  font-family: Roboto-regular, sans-serif;
+  color: #b6258f;
+}
+
+.partnershipForm .registerFormRow:last-child .registerFormCell:first-child {
+  vertical-align: top;
+  line-height: 2em;
+}
+
+.wrapPartnershipText {
+  margin-bottom: 3.75em;
+}
+
+.partnershipText,
+.partnershipTextList {
+  font-size: 1.125em;
+  color: #444444;
+  margin-bottom: 1.11111em;
+  line-height: 1.22222em;
+}
+
+.partnershipTitleSub {
+  font-size: 1.125em;
+  text-transform: uppercase;
+  color: #9951bd;
+  font-family: Roboto-medium, sans-serif;
+}
+
+.partnershipTextMail {
+  color: #b6258f;
+}
+.partnershipTextMail:hover {
+  color: #8c1c6e;
+}
+
+.partnershipForm .checkoutFormCommentBtn {
+  float: none;
+  text-align: right;
+  max-width: 455px;
 }
 
 /*------------------ Footer ------------------*/
